# lesson5_ws_updated

./: README.md
install/: local_setup.sh  setup.sh
install/rmitbot_bringup/share/rmitbot_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rmitbot_controller/share/rmitbot_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rmitbot_description/share/rmitbot_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/rmitbot_bringup/: CMakeLists.txt
src/rmitbot_bringup/launch/: realrobot.launch.py  simrobot.launch.py
src/rmitbot_controller/: CMakeLists.txt
src/rmitbot_controller/config/: rmitbot_controller.yaml
src/rmitbot_controller/launch/: teleopkeyboard.launch.py
src/rmitbot_description/: CMakeLists.txt
src/rmitbot_description/launch/: display.launch.py
src/rmitbot_description/urdf/: rmitbot.urdf.xacro  rmitbot_gazebo.xacro  rmitbot_platform.xacro  rmitbot_ros2_control.xacro
src/rmitbot_firmware/: CMakeLists.txt  package.xml
src/rmitbot_firmware/arduino_firmware/rmitbot_arduino_firmware/include/: MyController.h  MySerial.h  MySetup.h
src/rmitbot_firmware/arduino_firmware/rmitbot_arduino_firmware/src/: MySerial.cpp  main.cpp
src/rmitbot_firmware/launch/: hardware_interface.launch.py
src/rmitbot_firmware/src/: rmitbot_interface.cpp
src/rmitbot_localization/: CMakeLists.txt
src/rmitbot_localization/launch/: local_localization.launch.py
(+37 files in other folders)
